Fix off colour tabs and scrollbars

--- a/styles/ui-variables-custom.less
+++ b/styles/ui-variables-custom.less
@@ -99,13 +99,13 @@
 
 @scrollbar-color:                   darken(@level-3-color, 14%);
 @scrollbar-background-color:        @level-3-color; // replaced `transparent` with a solid color to test https://github.com/atom/one-light-ui/issues/4
-@scrollbar-color-editor:            contrast(@ui-syntax-color, darken(@ui-syntax-color, 14%), lighten(@ui-syntax-color, 9%) );
-@scrollbar-background-color-editor: @ui-syntax-color;
+@scrollbar-color-editor:            @base00;
+@scrollbar-background-color-editor: @base03;
 
 @tab-text-color:                    @text-color-subtle;
 @tab-text-color-active:             @text-color-highlight;
-@tab-text-color-editor:             contrast(@ui-syntax-color, lighten(@ui-syntax-color, 70%), @text-color-highlight );
-@tab-background-color-editor:       @ui-syntax-color;
+@tab-text-color-editor:             @base1;
+@tab-background-color-editor:       @base03;
 
 @tree-view-background-selected-color: @background-color-selected;
 
